src/layouts/sass/footer.scss
.footer {
    direction: rtl;
    color: #000;
    background-color: snow;
    padding: 4rem 0 2rem 0;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    background-position: center center;

    .footer-links {
        width: 100%;
        max-width: 1000px;
        display: flex;
        justify-content: center;

        .footer-link-wrapper {
            display: flex;
            gap: 5vw;
            
            width: 100%;

            .footer-link-items {
                display: flex;
                flex-direction: column;
                align-items: center;
                text-align: left;
                width: 180px;
                gap: 3vh;
                box-sizing: border-box;

                h2{
                    color: #21e0ad;
                }

                a {
                    position: relative;

                    text-align: center;

                    display: flex;
                    flex-direction: row;
                    justify-content: center;
                    align-items: center;
                    gap: 7px;

                    text-decoration: none;

                    cursor: pointer;
                    transition: all 300ms ease-in-out;
                    color: snow;

                    width: 100%;

                    &::before {
                        content: '';
                        right: 0;
                        width: 0%;
                        height: 2px;
                        background-color: rgb(33, 224, 173);

                        transition: all 300ms ease-in-out;
                    }

                    &:hover::before {
                        width: 10%;
                    }
                    &:hover {
                        transform: translateX(-20%);
                        color: rgb(33, 224, 173,0.8);;
                    }
                }

            }
        }
    }
}

